<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity"
    android:background="@drawable/back_reg">

    <LinearLayout
        style="@style/LinearLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/app_small_margin"
        android:paddingRight="@dimen/app_small_margin">

    <TextView
        style="@style/TextViewStyle"
        android:text="@string/tv_forgotPwd"
        android:fontFamily="cursive"
        android:textAlignment="center"
        android:textSize="@dimen/text_small_size" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/EditTextStyle"
        android:hint="@string/email_id"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/app_small_margin"/>

    <EditText
        android:id="@+id/etPassword"
        style="@style/EditTextStyle"
        android:hint="@string/et_newPwd"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/app_small_margin"/>

    <EditText
        android:id="@+id/etConfirmPassword"
        style="@style/EditTextStyle"
        android:hint="@string/et_confirm_pwd"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/app_small_margin"/>

        <Button
            android:id="@+id/bt_confirm"
            style="@style/ButtonStyle.Primary"
            android:textSize="@dimen/font_normal_size"
            android:layout_marginTop="@dimen/app_medium_margin"
            android:text="@string/bt_confirm" />
    </LinearLayout>
</RelativeLayout>