<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="LOGIN"
        android:src="@drawable/bg_crop1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/app_medium_margin"
        android:paddingRight="@dimen/app_medium_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="Login"
            android:textSize="@dimen/text_small_size" />

        <LinearLayout
            style="@style/LinearLayoutStyle"
            android:gravity="center"
            android:layout_marginTop="@dimen/app_medium_margin"
            android:paddingLeft="@dimen/app_medium_margin"
            android:paddingRight="@dimen/app_medium_margin">

            <Button
                android:id="@+id/btFacebook"
                style="@style/ButtonStyle.Facebook"
                android:layout_width="145dp"
                android:text="@string/bt_fbLogin" />

            <Button
                android:id="@+id/btGoogle"
                style="@style/ButtonStyle.Google"
                android:layout_width="145dp"
                android:layout_marginStart="@dimen/app_medium_margin"
                android:text="@string/bt_googleLogin" />

        </LinearLayout>

        <View
            style="@style/SeparatorStyle"
            android:layout_marginTop="24dp" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/EditTextStyle"
            android:layout_marginTop="24dp"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/EditTextStyle"
            android:layout_marginTop="@dimen/app_medium_margin"
            android:hint="@string/et_pwd"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/bt_login"
            style="@style/ButtonStyle.Primary"
            android:layout_marginTop="@dimen/app_medium_margin"
            android:text="@string/bt_login" />

        <TextView
            android:id="@+id/tv_forgotPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tv_forgotPwd"
            android:textColor="@color/colorPrimaryDark" />


        <Button
            android:id="@+id/bt_newAccount"
            style="@style/ButtonStyle.SignUp"
            android:layout_marginTop="90dp"
            android:text="@string/tv_newAccount" />
    </LinearLayout>
</RelativeLayout>